--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<script>
+		
 		function setSearchEngine() {
-			console.log("setSearchEngine function initialized.")
+			//console.log("setSearchEngine function initialized.")
+			let selection = document.querySelector("[name=engine]:checked");
+			let engineValue = selection.value;
+
+
+		
+			let actions = {
+				"Google": "https://www.google.com/",
+				"DuckDuckGo": "https://duckduckgo.com/",
+				"Bing": "https://www.bing.com/search?q=launchcode",
+				"Ask": "https://www.ask.com/web?o=0&l=dir&qo=serpSearchTopBox&q=launchcode"
+			}
+			let selectedAction = actions[engineValue];
 		}
 
 		// function SubmitForm() {
@@ -12,7 +25,8 @@
 		// }
 
 		window.addEventListener("load", function(){
-			setSearchEngine();
+			let form = document.getElementById("searchForm");
+			form.addEventListener("submit", setSearchEngine);
 		});
 	</script>
 </head>
@@ -26,7 +40,7 @@
 		<label><input type="radio" name="engine" value="Ask"/> Ask</label>
 		<br>
 
-		<button onclick="setSearchEngine()">Go!</button>
+		<input type="submit" value="Go!"/>
 	</form>
 
 </body>
@@ -38,6 +52,7 @@ Create a label element for each radio button.
 Finally, add a submit button to the form and set it's value to "Go!".
 
 https://www.google.com/search?safe=strict&sxsrf=ACYBGNRopfh0AEgSB9MrWLawDBoQi6fyCA%3A1572479152073&source=hp&ei=sCC6XbCgAcnwsQXlm5GIBA&q=launchcode&oq=launchcode&gs_l=psy-ab.3..35i39l2j0i20i263j0l3j0i20i263j0l3.35078.36289..36380...3.0..0.102.639.8j1......0....1..gws-wiz.....10..35i362i39j0i131j0i131i67j0i67.lOg5oSPvq6Q&ved=0ahUKEwiwuJeqlcXlAhVJeKwKHeVNBEEQ4dUDCAg&uact=5
+https://www.google.com/search?safe=strict&sxsrf=ACYBGNS_P1LqslOfs7osnf_LBHWmeiZTxA%3A1572484173636&source=hp&ei=TTS6XdyRI5HitQWwvL2gCw&q=launchcode&oq=launchcode&gs_l=psy-ab.3..35i39l2j0i20i263j0l3j0i20i263j0l3.1686.2819..2879...0.0..0.83.679.10......0....1..gws-wiz.....10..35i362i39j0i67j0i131.lAss_sm35B0&ved=0ahUKEwic7NKEqMXlAhURca0KHTBeD7QQ4dUDCAg&uact=5
 https://duckduckgo.com/?q=launchcode&t=hk&ia=web
 https://www.bing.com/search?q=launchcode&qs=n&form=QBLH&sp=-1&pq=launch&sc=8-6&sk=&cvid=D854321EF6254228882E0ACA0CB36110
 https://www.ask.com/web?o=0&l=dir&qo=serpSearchTopBox&q=launchcode 
