changed search engine addresses

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 		
 			let actions = {
-				"Google": "https://www.google.com/",
+				"Google": "https://www.google.com/search",
 				"DuckDuckGo": "https://duckduckgo.com/",
-				"Bing": "https://www.bing.com/search?q=launchcode",
-				"Ask": "https://www.ask.com/web?o=0&l=dir&qo=serpSearchTopBox&q=launchcode"
+				"Bing": "https://www.bing.com/search",
+				"Ask": "https://www.ask.com/"
 			}
 			let selectedAction = actions[engineValue];
 		}
