--- a/index.html
+++ b/index.html
@@ -3,41 +3,52 @@
 <head>
 	<meta charset="utf-8">
 	<script>
-		
+		// function setSearchEngine() {
+		// 	let form = document.getElementById("searchForm");
+		// 	let actions = {
+		// 		google: "https://www.google.com/",
+		// 		duckduckgo: "https://duckduckgo.com/",
+		// 		bing: "https://www.bing.com/search",
+		// 		ask: "https://www.ask.com/web"
+		// 	};
+			
+		// 	let selectedSearch = document.querySelector("[name=engine]:checked");
+		// 	let action = actions[selectedSearch.value];
+		// 	form.setAttribute("action", action);
+		// }
+
+
 		function setSearchEngine() {
-			//console.log("setSearchEngine function initialized.")
-			let selection = document.querySelector("[name=engine]:checked");
-			let engineValue = selection.value;
-
-
+			let form = document.getElementById("searchForm");
 		
 			let actions = {
-				"Google": "https://www.google.com/search",
-				"DuckDuckGo": "https://duckduckgo.com/",
-				"Bing": "https://www.bing.com/search",
-				"Ask": "https://www.ask.com/"
-			}
-			let selectedAction = actions[engineValue];
-		}
+				google: "https://www.google.com/",
+				duckduckgo: "https://duckduckgo.com/",
+				bing: "https://www.bing.com/search",
+				ask: "https://www.ask.com/web"
+			};
 
-		// function SubmitForm() {
-		// 	document.getElementById("searchForm").submit();
-		// }
+			let selectedSearch = document.querySelector("[name=engine]:checked");
+			let action = actions[selectedSearch.value];
+			form.setAttribute("action", action);
+
+		}
 
 		window.addEventListener("load", function(){
 			let form = document.getElementById("searchForm");
 			form.addEventListener("submit", setSearchEngine);
 		});
+
 	</script>
 </head>
 
 <body>
 	<form id="searchForm" onsubmit="setSearchEngine()">
 		<label><input type="text" name="q"/></label><br>
-		<label><input type="radio" name="engine" value="Google"/> Google</label><br>
-		<label><input type="radio" name="engine" value="DuckDuckGo"/> DuckDuckGo</label><br>
-		<label><input type="radio" name="engine" value="Bing"/> Bing</label><br>
-		<label><input type="radio" name="engine" value="Ask"/> Ask</label>
+		<label><input type="radio" name="engine" value="google"/> Google</label><br>
+		<label><input type="radio" name="engine" value="duckduckgo"/> DuckDuckGo</label><br>
+		<label><input type="radio" name="engine" value="bing"/> Bing</label><br>
+		<label><input type="radio" name="engine" value="ask"/> Ask</label>
 		<br>
 
 		<input type="submit" value="Go!"/>
