--- a/index.html
+++ b/index.html
@@ -2,27 +2,15 @@
 
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+	<link href="stylesheet.css" rel="stylesheet" type="text/css" />
+	
 	<script>
-		// function setSearchEngine() {
-		// 	let form = document.getElementById("searchForm");
-		// 	let actions = {
-		// 		google: "https://www.google.com/",
-		// 		duckduckgo: "https://duckduckgo.com/",
-		// 		bing: "https://www.bing.com/search",
-		// 		ask: "https://www.ask.com/web"
-		// 	};
-			
-		// 	let selectedSearch = document.querySelector("[name=engine]:checked");
-		// 	let action = actions[selectedSearch.value];
-		// 	form.setAttribute("action", action);
-		// }
-
-
 		function setSearchEngine() {
 			let form = document.getElementById("searchForm");
 		
 			let actions = {
-				google: "https://www.google.com/",
+				google: "https://www.google.com/search",
 				duckduckgo: "https://duckduckgo.com/",
 				bing: "https://www.bing.com/search",
 				ask: "https://www.ask.com/web"
@@ -31,19 +19,18 @@
 			let selectedSearch = document.querySelector("[name=engine]:checked");
 			let action = actions[selectedSearch.value];
 			form.setAttribute("action", action);
-
 		}
 
 		window.addEventListener("load", function(){
 			let form = document.getElementById("searchForm");
 			form.addEventListener("submit", setSearchEngine);
 		});
-
 	</script>
 </head>
 
 <body>
 	<form id="searchForm" onsubmit="setSearchEngine()">
+		<label>Search:</label><br>
 		<label><input type="text" name="q"/></label><br>
 		<label><input type="radio" name="engine" value="google"/> Google</label><br>
 		<label><input type="radio" name="engine" value="duckduckgo"/> DuckDuckGo</label><br>
@@ -61,10 +48,4 @@ Create a text input within the form and set its name attribute to the value "q".
 Create a radio group with one radio button for each search engine. Recall that radio buttons with the same name are grouped, so use the same value for this attribute, "engine", on each radio button.
 Create a label element for each radio button.
 Finally, add a submit button to the form and set it's value to "Go!".
-
-https://www.google.com/search?safe=strict&sxsrf=ACYBGNRopfh0AEgSB9MrWLawDBoQi6fyCA%3A1572479152073&source=hp&ei=sCC6XbCgAcnwsQXlm5GIBA&q=launchcode&oq=launchcode&gs_l=psy-ab.3..35i39l2j0i20i263j0l3j0i20i263j0l3.35078.36289..36380...3.0..0.102.639.8j1......0....1..gws-wiz.....10..35i362i39j0i131j0i131i67j0i67.lOg5oSPvq6Q&ved=0ahUKEwiwuJeqlcXlAhVJeKwKHeVNBEEQ4dUDCAg&uact=5
-https://www.google.com/search?safe=strict&sxsrf=ACYBGNS_P1LqslOfs7osnf_LBHWmeiZTxA%3A1572484173636&source=hp&ei=TTS6XdyRI5HitQWwvL2gCw&q=launchcode&oq=launchcode&gs_l=psy-ab.3..35i39l2j0i20i263j0l3j0i20i263j0l3.1686.2819..2879...0.0..0.83.679.10......0....1..gws-wiz.....10..35i362i39j0i67j0i131.lAss_sm35B0&ved=0ahUKEwic7NKEqMXlAhURca0KHTBeD7QQ4dUDCAg&uact=5
-https://duckduckgo.com/?q=launchcode&t=hk&ia=web
-https://www.bing.com/search?q=launchcode&qs=n&form=QBLH&sp=-1&pq=launch&sc=8-6&sk=&cvid=D854321EF6254228882E0ACA0CB36110
-https://www.ask.com/web?o=0&l=dir&qo=serpSearchTopBox&q=launchcode 
 -->
